# report-framework

./: .env.example  .gitignore  README.md  flake.nix  main.py  pyproject.toml
.claude/: settings.json
.claude/commands/: rf-create-report-spec.md  rf-generate-report.md
.ruler/: development-commands.md  documentation-sources.md  python-guidelines.md  ruler.toml
.serena/: project.yml
